wasta-xfce-bionic (0.9.7) bionic; urgency=medium

  * xfce4-redmond-lite: set monitor1 backgrounds in xfce4-display.xml

 -- Rik Shaw <rikshaw76@gmail.com>  Wed, 09 Jan 2019 12:49:31 +0300

wasta-xfce-bionic (0.9.6) bionic; urgency=medium

  * xfce4-redmond-lite: xfcd4-power-manager handle-brightness-keys true
  * xfce4-redmond-lite: cleanup of xfce-perchannel-xml settings

 -- Rik Shaw <rikshaw76@gmail.com>  Tue, 08 Jan 2019 13:04:59 +0300

wasta-xfce-bionic (0.9.5) bionic; urgency=medium

  * xfce4-redmond-lite: cycle all windows (including hidden)

 -- Rik Shaw <rikshaw76@gmail.com>  Mon, 24 Dec 2018 15:13:11 +0300

wasta-xfce-bionic (0.9.4) bionic; urgency=medium

  * xfce4-redmond-lite: raise_with_any_button = false

 -- Rik Shaw <rikshaw76@gmail.com>  Mon, 24 Dec 2018 12:04:44 +0300

wasta-xfce-bionic (0.9.3) bionic; urgency=medium

  * debian/control: moving items to Depends, adding sox

 -- Rik Shaw <rikshaw76@gmail.com>  Thu, 20 Dec 2018 18:37:59 +0300

wasta-xfce-bionic (0.9.2) bionic; urgency=medium

  * minor tweaks to xfce4-redmond-lite

 -- Rik Shaw <rikshaw76@gmail.com>  Thu, 20 Dec 2018 13:03:48 +0300

wasta-xfce-bionic (0.9.1) bionic; urgency=medium

  * re-organizing to support wasta-xfce-layout in the future

 -- Rik Shaw <rikshaw76@gmail.com>  Thu, 20 Dec 2018 10:38:42 +0300

wasta-xfce-bionic (0.9.0) bionic; urgency=medium

  * initial release for Ubuntu 18.04

 -- Rik Shaw <rikshaw76@gmail.com>  Thu, 20 Dec 2018 09:27:34 +0300