@@ -17,6 +17,7 @@
         <value type="int" value="5"/>
         <value type="int" value="7"/>
         <value type="int" value="8"/>
+        <value type="int" value="9"/>
         <value type="int" value="10"/>
         <value type="int" value="11"/>
         <value type="int" value="12"/>
@@ -24,6 +25,7 @@
         <value type="int" value="14"/>
         <value type="int" value="15"/>
         <value type="int" value="16"/>
+        <value type="int" value="17"/>
       </property>
     </property>
   </property>
@@ -56,24 +58,36 @@
       </property>
       <property name="disable-tooltips" type="bool" value="true"/>
     </property>
-    <property name="plugin-10" type="string" value="tasklist">
+    <property name="plugin-9" type="string" value="launcher">
+      <property name="items" type="array">
+        <value type="string" value="wasta-backup.desktop"/>
+      </property>
+      <property name="disable-tooltips" type="bool" value="true"/>
+    </property>
+    <property name="plugin-10" type="string" value="launcher">
+      <property name="items" type="array">
+        <value type="string" value="wasta-resources.desktop"/>
+      </property>
+      <property name="disable-tooltips" type="bool" value="true"/>
+    </property>
+    <property name="plugin-11" type="string" value="tasklist">
       <property name="sort-order" type="uint" value="4"/>
       <property name="window-scrolling" type="bool" value="false"/>
       <property name="include-all-monitors" type="bool" value="false"/>
     </property>
-    <property name="plugin-11" type="string" value="separator">
+    <property name="plugin-12" type="string" value="separator">
       <property name="expand" type="bool" value="true"/>
       <property name="style" type="uint" value="0"/>
     </property>
-    <property name="plugin-12" type="string" value="separator">
+    <property name="plugin-13" type="string" value="separator">
       <property name="style" type="uint" value="1"/>
     </property>
-    <property name="plugin-13" type="string" value="systray"/>
-    <property name="plugin-14" type="string" value="pulseaudio">
+    <property name="plugin-14" type="string" value="systray"/>
+    <property name="plugin-15" type="string" value="pulseaudio">
       <property name="enable-keyboard-shortcuts" type="bool" value="true"/>
     </property>
-    <property name="plugin-15" type="string" value="power-manager-plugin"/>
-    <property name="plugin-16" type="string" value="clock">
+    <property name="plugin-16" type="string" value="power-manager-plugin"/>
+    <property name="plugin-17" type="string" value="clock">
       <property name="digital-format" type="string" value=" %l:%M %p "/>
       <property name="tooltip-format" type="string" value="%A %d %B, %Y"/>
     </property>
